# wry_react_webpack_template

./: Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: deploy.yml
src/: App.tsx  main.rs
ui/: index.html
ui/src/: App.tsx
