[package]
name = "wry_react_webpack_template"
version = "0.1.0"
authors = ["FrankenApps <de.frankenapps@gmail.com>"]
edition = "2018"
description = "A template to demonstrate the use of React and Webpack with wry."
license = "MIT"

[dependencies]
rfd = "0.4.0"
rust-embed = "5.9.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
wry = "0.12.2"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"  # Customers do not need a stacktrace.